Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-13475

net use fails at displaying all the connections

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.6
    • Wine
    • None
    • June 2017

    Description

      First case: in case there are several connections to remote shares, using several network providers, enumerating them all with "net use" command fails ; not all the connections are displayed.

      Second case: in case there are several network providers, if a connection is made with second priority network provider, and none with the first priority network provider, no connection are displayed.

      Attachments

        Activity

          People

            Heis Spiter Pierre Schweitzer
            Heis Spiter Pierre Schweitzer
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: